Correção dos CSS e JS da página principal da transição.

--- a/visoes/fragmentos/topmenu.hbs
+++ b/visoes/fragmentos/topmenu.hbs
@@ -1,4 +1,4 @@
- <body OnLoad="document.search.input.focus();">
+ <body>
       <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
           <div class="container">
               <div class="navbar-header">
