--- a/visoes/fragmentos/header.hbs
+++ b/visoes/fragmentos/header.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/images/faviconNew.ico">
+    <link rel="icon" href="/img/faviconNew.ico">
 
     <title>Bispix</title>
 
