--- a/visoes/template/index.hbs
+++ b/visoes/template/index.hbs
@@ -13,7 +13,7 @@
                     <form class="form-inline" id="search" name="search" method="post" action="/resultados">
                         <div class="form-group">
                             <input style="width: 25em;" type="text" class="form-control"
-                                placeholder="Busque aqui..." name="query">
+                                placeholder="Busque aqui..." name="query" id="busca">
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary" href="/resultados">
@@ -28,8 +28,15 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="assets/bs/js/bootstrap.min.js"></script>
-        <script src="assets/js/offcanvas.js"></script>
+        <script src="/assets/bs/js/bootstrap.min.js"></script>
+        <script src="/assets/js/offcanvas.js"></script>
+
+        <script>
+            // Usando getElementById (mais confiável)
+            window.onload = function() {
+                document.getElementById('busca').focus();
+            };
+        </script>
         
     </body>
 </html>
